# AI-xiaozhi-chatbot

New_folder/xiaozhi-esp32-main/main/: CMakeLists.txt  Kconfig.projbuild  application.cc  application.h
New_folder/xiaozhi-esp32-main/main/assets/locales/vi-VN/: language.json
New_folder/xiaozhi-esp32-main/main/boards/puppy-robot/: README.md  config.h  oscillator.cc  puppy_controller.cc  puppy_emoji_display.cc  puppy_movements.cc  puppy_movements.h
New_folder/xiaozhi-esp32-main/main/display/: lcd_display.cc  oled_display.cc
New_folder/xiaozhi-esp32-main/main/mobile_connect/: sse_server.cc  sse_server.h
New_folder/xiaozhi-esp32-main/main/protocols/: mqtt_protocol.cc  protocol.h  websocket_protocol.cc
mobile_xiaozhi/: App.js  app.json  package-lock.json  package.json
mobile_xiaozhi/src/: app_robot.js  connectpage.js  homepage.js
mobile_xiaozhi/src/page/: actionscreen.js
xiaozhi-esp32-main/main/: CMakeLists.txt  Kconfig.projbuild  mcp_server.cc
xiaozhi-esp32-main/main/assets/locales/tr-TR/: language.json
xiaozhi-esp32-main/main/boards/common/: wifi_board.cc  wifi_board.h
xiaozhi-esp32-main/main/boards/puppy-robot/: config.h  config.json  puppy_controller.cc  puppy_emoji_display.cc  puppy_emoji_display.h  puppy_icon_font.c  puppy_movements.cc  puppy_movements.h  puppy_robot.cc
xiaozhi-esp32-main/main/boards/zeri-robot/: config.h  otto_emoji_display.cc  power_manager.h  zeri_controller.cc  zeri_movements.cc  zeri_movements.h  zeri_robot.cc
